--- a/README
+++ b/README
@@ -46,30 +46,35 @@
   operational and data warehouse data. The zip file has a built-in derby database 
   installation. 
   0, To start the built-in derby database server: 
-     <INST_PATH>/startNetworkServer.sh | bat
+     <INST_PATH>/bin/startNetworkServer.sh | bat
   1, To create operational database and populate the coundown transaction data
      prepared by Dr. Muhammad Asif Naeem
-     <INST_PATH>/create.populate.countdown.data.sh | bat
+     <INST_PATH>/bin/create.populate.countdown.data.sh | bat
   2, To create the data warehouse star schema:
-     <INST_PATH>/create.DW.star.schema.sh | bat
+     <INST_PATH>/bin/create.DW.star.schema.sh | bat
   3, To execute the program to extract the transaction data and load it into the 
      data warehouse:
-     <INST_PATH>/runETL.sh | bat
+     <INST_PATH>/bin/runETL.sh | bat
   4, To execute the OLAP queries:
-     <INST_PATH>/DW.OLAP.query.sh | bat
+     <INST_PATH>/bin/DW.OLAP.query.sh | bat
    
   For using Oracle database, 
-  0, Open the Oracle SQL Developer, and connect to a database
-  1, Execute the <INST_PATH>/DDL/Input.DB.DDL.sql to create the countdown 
+  0, Open the Oracle SQL Developer, and connect to the AUT database using 
+        user:     kqc3001
+        password: warehouse
+        server:   oracle2.aut.ac.nz
+        port:     1521
+        dbName:   msdbs
+  1, Execute the <INST_PATH>/DDL/Input.DB.DDL.Oracle.sql to create the countdown 
      transaction data and populate the data
-  2, Execute the <INST_PATH>/DDL/Output.DW.DDL.sql to create Data Warehouse 
+  2, Execute the <INST_PATH>/DDL/Output.DW.DDL.Oracle.sql to create Data Warehouse 
      star schema tables
   3, Update the system.properties to update the database connection properties
      to connect to Oracle database
   4, To execute the program to extract the transaction data and load it into the 
      data warehouse:
-     <INST_PATH>/runETL.sh | bat
-  5, Execute the <INST_PATH>/DDL/Assign2.DW.Query.sql file to make OLAP queries.
+     <INST_PATH>/bin/runETL.sh | bat
+  5, Execute the <INST_PATH>/DDL/Assign2.DW.Query.Oracle.sql file to make OLAP queries.
 
   Licensing
   ---------------------
